# T2-QuestFlightLab

./: .gitignore  AGENTS.md  README.md
QuestFlightLab/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
docs/: AIRCRAFT_ASSET_PIPELINE.md  AIRPORT_SOURCE_NOTES.md  ASSET_SOURCES.md  AUTONOMOUS_TESTING.md  AUTONOMOUS_VISUAL_QA.md  C172_REFERENCE_TARGETS.md  COCKPIT_VIEWPOINT_CALIBRATION.md  ENVIRONMENT_DATA_SOURCES.md  ENVIRONMENT_WORLD_BUILDING.md  EVIDENCE_PLAN.md  FLIGHT_MODEL_NOTES.md  GAUSSIAN_SPLAT_SPIKE.md  GEOSPATIAL_SCENERY_PLAN.md  JSBSIM_INTEGRATION_PLAN.md  PERFORMANCE_BUDGETS.md  PRODUCTION_FIDELITY_STRATEGY.md  PROJECT_BRIEF.md  QUEST_SETUP.md  ROADMAP.md  SCENERY_AND_SPLATS.md  SCENIC_SPLAT_ASSET_PIPELINE.md  STABILIZED_APPROACH_AND_GO_AROUND.md  TRAINING_MODE.md  USB2BLE_INTEGRATION.md  USB2BLE_QUEST_TEST_PLAN.md  VISUAL_BASELINE.md
docs/evidence/: AUTONOMOUS_VISUAL_QA_WITNESS_2026-07-08.md  FLIGHT_CORE_AUTONOMOUS_SIM_WITNESS_2026-06-12.md  FLIGHT_MODEL_FIDELITY_AUTONOMOUS_WITNESS_2026-06-12.md  GAUSSIAN_SPLAT_FEASIBILITY_SPIKE_2026-06-12.md  GAUSSIAN_SPLAT_QUEST_RUNTIME_SPIKE_2026-06-12.md  GAUSSIAN_SPLAT_REAL_RENDERER_SPIKE_2026-06-12.md  JSBSIM_LIVE_EDITOR_DRIVER_WITNESS_2026-07-08.md  KBDU_ENVIRONMENT_RENDERING_PHYSICS_UPGRADE_2026-07-08.md  KBDU_VISUAL_PHYSICS_V2_WITNESS_2026-07-08.md  PLAYABLE_SCENIC_SPLAT_DEMO_WITNESS_2026-06-13.md  (+14 more)
native/jsbsim_bridge/: CMakeLists.txt  README.md
native/jsbsim_bridge/include/: qfl_jsbsim_native.h
native/jsbsim_bridge/src/: qfl_jsbsim_native.cpp  qfl_jsbsim_smoke.cpp
scripts/: build_jsbsim_native.ps1  build_production_quest.ps1  build_quest.ps1  capture_editor_views.ps1  inspect_jsbsim_apk.ps1  install_quest.ps1  launch_quest_playtest.ps1  prepare_playable_scenic_splat.ps1  prepare_splat_runtime_samples.ps1  run_adb_logcat.ps1  run_editor_scenario_tests.ps1  run_jsbsim_editor_bridge.ps1  run_jsbsim_live_editor_driver.ps1  run_jsbsim_native_validation.ps1  run_production_visual_qa.ps1  run_quest_splat_runtime_mode.ps1  run_quest_temporal_visual_gate.ps1  run_real_splat_renderer_spike.ps1  run_splat_spike.ps1  run_unity_tests.ps1  run_visual_qa.ps1
tools/: generate_c172_style_assets.py  generate_scenic_splat_patch.py  generate_tiny_splat_samples.py  visual_qa_analyze.py
(+202 files in other folders)
